--- a/app/views/treasures/init.jade
+++ b/app/views/treasures/init.jade
@@ -11,9 +11,9 @@ block content
               input.form-control(type='text', placeholder='Treasure Name', name='name')
             .form-group
               label Location
-              input.form-control(type='text', name='loc', placeholder='Nevada')
-              input.form-control(type='hidden', name='loc', data-lat='lat')
-              input.form-control(type='hidden', name='loc', data-lng='lng')
+              input.form-control(type='text', name='loc', data-loc='name', placeholder='Nevada')
+              input.form-control(type='hidden', name='loc', data-loc='lat')
+              input.form-control(type='hidden', name='loc', data-loc='lng')
             .form-group#hints
               label Hints
               input.form-control(type='text', placeholder='Hint', name='hints')
