--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,6 +1,15 @@
 @base: #f938ab;
 
 body{
-  background-color: saturate(@base, 5%);
+  /* background-color: saturate(@base, 5%); */
+
+}
+
+.inserted {
+  margin-top: 5px;
+}
+
+#map {
+  height: 400px;
 }
 
