--- a/app/views/treasures/index.jade
+++ b/app/views/treasures/index.jade
@@ -1,5 +1,30 @@
 extends ../shared/template
 block content
+  .panel.panel-default
+    .panel-body
+      .row
+        .col-xs-12
+          #map
+      .row
+        .col-xs-12
+          table.table.table-hover
+            thead
+              tr
+                th Name
+                th Location
+                th Difficulty
+                th Tags
+                th Order
+                th Found
+            tbody
+              each treasure in treasures
+                tr(data-name='#{treasure.loc.name}', data-lat='#{treasure.loc.lat}', data-lng='#{treasure.loc.lng}')
+                  td= treasure.name
+                  td= treasure.loc.name
+                  td= treasure.difficulty
+                  td= treasure.tags
+                  td= treasure.order
+                  td= treasure.isFound
 
 block scripts
   script(src='/js/user/treasures.js')
