--- a/app/views/treasures/init.jade
+++ b/app/views/treasures/init.jade
@@ -8,33 +8,32 @@ block content
           .col-xs-6
             .form-group
               label Treasure Name
-              input.form-control(type='text', placeholder='Treasure Name', name='name')
+              input.form-control(type='text', placeholder='Blood Diamonds', name='name')
             .form-group
               label Location
-              input.form-control(type='text', name='loc', data-loc='name', placeholder='Nevada')
+              input.form-control(type='text', name='loc', data-loc='name', placeholder='Las Vegas, NV')
               input.form-control(type='hidden', name='loc', data-loc='lat')
               input.form-control(type='hidden', name='loc', data-loc='lng')
             .form-group#hints
               label Hints
-              input.form-control(type='text', placeholder='Hint', name='hints')
+              input.form-control(type='text', placeholder='Prof. Plum, in the study, with the wrench', name='hints')
             button#addHint.btn.btn-primary.btn-lg(type='button') Add Hint
           .col-xs-6
             .form-group
-              label Upload Photo
+              label Pics or it didn't happen
               input.form-control(type='file',name='photos', multiple=true)
             .form-group
               label Difficulty
-              br
-              select(name='difficulty')
+              select.form-control(name='difficulty')
                 option(value='1') Easy
                 option(value='2') Medium
                 option(value='3') Hard
             .form-group
               label Tags
-              input.form-control(type='text', placeholder='Tags seperated by commas', name='tags')
+              input.form-control(type='text', placeholder='tag 1, tag 2, tag 3', name='tags')
             .form-group
               label(for='order') Order
-              input.form-control(type='number', name='order')
+              input.form-control(type='number', name='order', value='#{order}')
             button.btn.btn-primary.btn-lg(type='submit') Submit
 
 block scripts
