--- a/app/views/treasures/index.jade
+++ b/app/views/treasures/index.jade
@@ -3,7 +3,7 @@ block content
   .panel.panel-default
     .panel-body
       .row
-        .col-xs-12
+        .col-xs-12#main
           #map
       .row
         .col-xs-12
