--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,18 +1,22 @@
 @base: #f938ab;
 
 body{
-  /* background-color: saturate(@base, 5%); */
+  background-image: url(/img/piratebg.jpeg);
+  background-size: cover;
+}
 
+.navbar {
+  margin-top: 15px;
 }
 
 .inserted {
   margin-top: 5px;
 }
 
-#main #map {
-  height: 400px;
-}
-
-#show #map {
-  height 200px;
+.photo {
+  display: inline-block;
+  margin: 5px;
+  height: 200px;
+  width: 200px;
+  background-size: cover;
 }
