--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-.inserted{margin-top:5px}#main #map{height:400px}
+body{background-image:url(/img/piratebg.jpeg);background-size:cover}.navbar{margin-top:15px}.inserted{margin-top:5px}.photo{display:inline-block;margin:5px;height:200px;width:200px;background-size:cover}
