--- a/app/views/treasures/index.jade
+++ b/app/views/treasures/index.jade
@@ -4,7 +4,7 @@ block content
     .panel-body
       .row
         .col-xs-12#main
-          #map
+          #map(style='height:400px')
       .row
         .col-xs-12
           table.table.table-hover
@@ -22,7 +22,7 @@ block content
                   td!= linkBuilder.allowLink(treasure)
                   td= treasure.loc.name
                   td= linkBuilder.difficulty(treasure.difficulty)
-                  td= treasure.tags
+                  td!= linkBuilder.tags(query, treasure.tags)
                   td= treasure.order
                   td= treasure.isFound
 
