--- a/app/views/treasures/init.jade
+++ b/app/views/treasures/init.jade
@@ -33,7 +33,7 @@ block content
               input.form-control(type='text', placeholder='tag 1, tag 2, tag 3', name='tags')
             .form-group
               label(for='order') Order
-              input.form-control(type='number', name='order', value='#{order}')
+              input.form-control(type='number', name='order', value='#{order}', readonly=true)
             button.btn.btn-primary.btn-lg(type='submit') Submit
 
 block scripts
