--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,12 +1,17 @@
-@base: #f938ab;
+@import url(http://fonts.googleapis.com/css?family=Trade+Winds);
 
 body{
   background-image: url(/img/piratebg.jpeg);
   background-size: cover;
 }
 
+h2 {
+  font-family: 'Trade Winds', cursive;
+}
+
 .navbar {
   margin-top: 15px;
+  font-family: 'Trade Winds', cursive;
 }
 
 .inserted {
