--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,17 +1,12 @@
 extends ../shared/template
 block content
-  h2 Home
+  h2 Welcom Back Matey
   .panel.panel-default
     .panel-body
-      h4 Bootstrap Themes and Templates
-      ul
-        li: a(href='http://bootswatch.com/', target='_blank') http://bootswatch.com/
-        li: a(href='http://bootstrapzero.com/', target='_blank') http://bootstrapzero.com/
-        li: a(href='http://startbootstrap.com/', target='_blank') http://startbootstrap.com/
-        li: a(href='http://www.prepbootstrap.com/', target='_blank') http://www.prepbootstrap.com/
-        li: a(href='http://www.blacktie.co/', target='_blank') http://www.blacktie.co/
-        li: a(href='https://bootstrapmaster.com/', target='_blank') https://bootstrapmaster.com/
-        li: a(href='http://bootstrapstyler.com/', target='_blank') http://bootstrapstyler.com/
+      h4 Yarr!
+      p Jack Tar yawl cutlass rope's end fore pinnace careen cog haul wind crack Jennys tea cup. Haul wind gangplank measured fer yer chains warp topgallant loaded to the gunwalls yard Chain Shot crack Jennys tea cup provost. Lee squiffy lugsail wench barque quarterdeck Sail ho scourge of the seven seas hardtack draft.
+      p Chantey doubloon Blimey ballast hempen halter spyglass bucko list prow jury mast. Scuttle strike colors topmast pink brig ho schooner tack killick piracy. Gold Road draught stern pinnace gun schooner aft yo-ho-ho Spanish Main Sink me.
+      p Topgallant gaff haul wind holystone chandler rigging gally long clothes gibbet lugger. American Main salmagundi wherry shrouds rigging avast yawl grog ho lateen sail. Red ensign take a caulk boatswain brigantine hulk Jack Tar reef parrel transom main sheet.
 
 block scripts
   script(src='/js/user/home.js')
