--- a/app/views/shared/nav.jade
+++ b/app/views/shared/nav.jade
@@ -10,6 +10,6 @@
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right
+        li: a(href='/treasures') Treasures
         li: a(href='/treasures/new') New Treasure
-        li: a(href='/treasures') View Treasures
 
