--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -9,6 +9,10 @@ h2 {
   font-family: 'Trade Winds', cursive;
 }
 
+td, th {
+  text-align: center;
+}
+
 .navbar {
   margin-top: 15px;
   font-family: 'Trade Winds', cursive;
@@ -25,3 +29,4 @@ h2 {
   width: 200px;
   background-size: cover;
 }
+
